[project]
name = "altbrow"
version = "0.1.0"
description = "An alternative, crawler-like browser that looks beneath the surface of the semantic web."
readme = "README.md"
requires-python = ">=3.12"

authors = [
  { name = "Electrical Smile", email = "esmile@posteo.net" }
]

license = { text = "GPL-2.0-or-later" }

[project.urls]
Homepage = "https://tmp.gedankenfalle.de"
Source = "https://github.com/yourname/altbrow"

# --------------------
# Tool configuration
# --------------------

[tool.flake8]
max-line-length = 88
indent-size = 2
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
indent = 2
line_length = 88

[tool.pyright]
typeCheckingMode = "basic"
