[project]
name = "altbrow"
version = "0.1.1"
description = "An alternative, crawler-like browser that looks beneath the surface of the semantic web."
readme = "README.md"
requires-python = ">=3.12"

authors = [
  { name = "Electrical Smile", email = "esmile@posteo.net" }
]

license = { text = "GPL-2.0-or-later" }
# license = { file = "LICENSE" }

dependencies = [
  "requests",
  "beautifulsoup4",
  "lxml",
  "extruct",
  "rdflib",
  "tldextract",
  "PyYAML"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "mkdocs",
  "mkdocstrings[python]"
]

[project.urls]
Homepage = "https://tmp.gedankenfalle.de/html5"
Source = "https://github.com/gesmile/altbrow"

# --------------------
# Tool configuration
# --------------------

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app"]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.isort]
profile = "black"
indent = 2
line_length = 88

[tool.pyright]
typeCheckingMode = "basic"

[project.scripts]
altbrow = "app.main:main"
