[project]
name = "altbrow"
description = "An alternative, crawler-like browser that looks beneath the surface of the semantic web."
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

authors = [
  { name = "Electrical Smile", email = "esmile@posteo.net" }
]

license = "GPL-3.0-or-later"
# license = { text = "GPL-2.0-or-later" }
# license = { file = "LICENSE" }

dependencies = [
  "requests",
  "beautifulsoup4",
  "lxml",
  "extruct",
  "rdflib",
  "tldextract",
  "PyYAML",
  "dnspython",
  "maxminddb"
]

[project.optional-dependencies]
dev = [
  "build",
  "ruff",
  "pytest",
  "mkdocs",
  "mkdocstrings[python]",
  "mypy",
  "pip-tools"
]

[project.urls]
Homepage = "https://tmp.gedankenfalle.de/html5"
Source = "https://github.com/gesmile/altbrow"

# --------------------
# Tool configuration
# --------------------

[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["altbrow"]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.isort]
profile = "black"
indent = 2
line_length = 88

[tool.pyright]
typeCheckingMode = "basic"

[project.scripts]
altbrow = "altbrow.main:main"

# [tool.mypy]
# ignore_missing_imports = true
# disable_error_code = ["attr-defined", "import-untyped"]